metadata/objects/graxaccountindex__x.object
<CustomObject>
    <fields>
        <fullName>Programs_c__c</fullName>
        <description>Programs__c</description>
        <externalDeveloperName>Programs__c</externalDeveloperName>
        <label>Programs__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating_Indicator_c__c</fullName>
        <description>Rating_Indicator__c</description>
        <externalDeveloperName>Rating_Indicator__c</externalDeveloperName>
        <label>Rating_Indicator__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <description>Rating</description>
        <externalDeveloperName>Rating</externalDeveloperName>
        <label>Rating</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeId__c</fullName>
        <description>RecordTypeId</description>
        <externalDeveloperName>RecordTypeId</externalDeveloperName>
        <label>RecordTypeId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeId_grax_xf_recordtype__c</fullName>
        <description>RecordTypeId_grax_xf_recordtype</description>
        <externalDeveloperName>RecordTypeId_grax_xf_recordtype</externalDeveloperName>
        <label>RecordTypeId_grax_xf_recordtype</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType_Name__c</fullName>
        <description>RecordType_Name</description>
        <externalDeveloperName>RecordType_Name</externalDeveloperName>
        <label>RecordType_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_c__c</fullName>
        <description>Region__c</description>
        <externalDeveloperName>Region__c</externalDeveloperName>
        <label>Region__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ_AssetQuantitiesCombined_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SBQQ__AssetQuantitiesCombined__c</description>
        <externalDeveloperName>SBQQ__AssetQuantitiesCombined__c</externalDeveloperName>
        <label>SBQQ__AssetQuantitiesCombined__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ_CoTermedContractsCombined_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SBQQ__CoTermedContractsCombined__c</description>
        <externalDeveloperName>SBQQ__CoTermedContractsCombined__c</externalDeveloperName>
        <label>SBQQ__CoTermedContractsCombined__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ_IgnoreParentContractedPrices_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SBQQ__IgnoreParentContractedPrices__c</description>
        <externalDeveloperName>SBQQ__IgnoreParentContractedPrices__c</externalDeveloperName>
        <label>SBQQ__IgnoreParentContractedPrices__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ_PreserveBundle_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SBQQ__PreserveBundle__c</description>
        <externalDeveloperName>SBQQ__PreserveBundle__c</externalDeveloperName>
        <label>SBQQ__PreserveBundle__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate_c__c</fullName>
        <description>SLAExpirationDate__c</description>
        <externalDeveloperName>SLAExpirationDate__c</externalDeveloperName>
        <label>SLAExpirationDate__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber_c__c</fullName>
        <description>SLASerialNumber__c</description>
        <externalDeveloperName>SLASerialNumber__c</externalDeveloperName>
        <label>SLASerialNumber__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_c__c</fullName>
        <description>SLA__c</description>
        <externalDeveloperName>SLA__c</externalDeveloperName>
        <label>SLA__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSP_User_pc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SSP_User__pc</description>
        <externalDeveloperName>SSP_User__pc</externalDeveloperName>
        <label>SSP_User__pc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salesforce_Organization_ID_c__c</fullName>
        <description>Salesforce_Organization_ID__c</description>
        <externalDeveloperName>Salesforce_Organization_ID__c</externalDeveloperName>
        <label>Salesforce_Organization_ID__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <description>Salutation</description>
        <externalDeveloperName>Salutation</externalDeveloperName>
        <label>Salutation</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scorecard_Last_Updated_c__c</fullName>
        <description>Scorecard_Last_Updated__c</description>
        <externalDeveloperName>Scorecard_Last_Updated__c</externalDeveloperName>
        <label>Scorecard_Last_Updated__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Territory_c__c</fullName>
        <description>Service_Territory__c</description>
        <externalDeveloperName>Service_Territory__c</externalDeveloperName>
        <label>Service_Territory__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Territory_c_grax_xf_serviceterri__c</fullName>
        <description>Service_Territory__c_grax_xf_serviceterritory</description>
        <externalDeveloperName>Service_Territory__c_grax_xf_serviceterritory</externalDeveloperName>
        <label>Service_Territory__c_grax_xf_serviceterr</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Territory_r_Name__c</fullName>
        <description>Service_Territory__r_Name</description>
        <externalDeveloperName>Service_Territory__r_Name</externalDeveloperName>
        <label>Service_Territory__r_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingAddress__c</fullName>
        <description>ShippingAddress</description>
        <externalDeveloperName>ShippingAddress</externalDeveloperName>
        <label>ShippingAddress</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingBillingLatitude__c</fullName>
        <description>ShippingBillingLatitude</description>
        <externalDeveloperName>ShippingBillingLatitude</externalDeveloperName>
        <label>ShippingBillingLatitude</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShippingBillingLongitude__c</fullName>
        <description>ShippingBillingLongitude</description>
        <externalDeveloperName>ShippingBillingLongitude</externalDeveloperName>
        <label>ShippingBillingLongitude</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShippingCity__c</fullName>
        <description>ShippingCity</description>
        <externalDeveloperName>ShippingCity</externalDeveloperName>
        <label>ShippingCity</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingCountry__c</fullName>
        <description>ShippingCountry</description>
        <externalDeveloperName>ShippingCountry</externalDeveloperName>
        <label>ShippingCountry</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingGeo_Latitude_s__c</fullName>
        <description>ShippingGeo__Latitude__s</description>
        <externalDeveloperName>ShippingGeo__Latitude__s</externalDeveloperName>
        <label>ShippingGeo__Latitude__s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShippingGeo_Longitude_s__c</fullName>
        <description>ShippingGeo__Longitude__s</description>
        <externalDeveloperName>ShippingGeo__Longitude__s</externalDeveloperName>
        <label>ShippingGeo__Longitude__s</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShippingGeo_c__c</fullName>
        <description>ShippingGeo__c</description>
        <externalDeveloperName>ShippingGeo__c</externalDeveloperName>
        <label>ShippingGeo__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingGeocodeAccuracy__c</fullName>
        <description>ShippingGeocodeAccuracy</description>
        <externalDeveloperName>ShippingGeocodeAccuracy</externalDeveloperName>
        <label>ShippingGeocodeAccuracy</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingLatitude__c</fullName>
        <description>ShippingLatitude</description>
        <externalDeveloperName>ShippingLatitude</externalDeveloperName>
        <label>ShippingLatitude</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShippingLongitude__c</fullName>
        <description>ShippingLongitude</description>
        <externalDeveloperName>ShippingLongitude</externalDeveloperName>
        <label>ShippingLongitude</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShippingPostalCode__c</fullName>
        <description>ShippingPostalCode</description>
        <externalDeveloperName>ShippingPostalCode</externalDeveloperName>
        <label>ShippingPostalCode</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingPostalState__c</fullName>
        <description>ShippingPostalState</description>
        <externalDeveloperName>ShippingPostalState</externalDeveloperName>
        <label>ShippingPostalState</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingState__c</fullName>
        <description>ShippingState</description>
        <externalDeveloperName>ShippingState</externalDeveloperName>
        <label>ShippingState</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingStreet__c</fullName>
        <description>ShippingStreet</description>
        <externalDeveloperName>ShippingStreet</externalDeveloperName>
        <label>ShippingStreet</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Partner_Users_c__c</fullName>
        <description>Show_Partner_Users__c</description>
        <externalDeveloperName>Show_Partner_Users__c</externalDeveloperName>
        <label>Show_Partner_Users__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_on_Checkin_Map_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show_on_Checkin_Map__c</description>
        <externalDeveloperName>Show_on_Checkin_Map__c</externalDeveloperName>
        <label>Show_on_Checkin_Map__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SicDesc__c</fullName>
        <description>SicDesc</description>
        <externalDeveloperName>SicDesc</externalDeveloperName>
        <label>SicDesc</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sic__c</fullName>
        <description>Sic</description>
        <externalDeveloperName>Sic</externalDeveloperName>
        <label>Sic</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <description>Site</description>
        <externalDeveloperName>Site</externalDeveloperName>
        <label>Site</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SlickSidebar_AccountAddress_pc__c</fullName>
        <description>SlickSidebar_AccountAddress__pc</description>
        <externalDeveloperName>SlickSidebar_AccountAddress__pc</externalDeveloperName>
        <label>SlickSidebar_AccountAddress__pc</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Registered_c__c</fullName>
        <description>State_Registered__c</description>
        <externalDeveloperName>State_Registered__c</externalDeveloperName>
        <label>State_Registered__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <description>SystemModstamp</description>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>SystemModstamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TEST_FIELD_c__c</fullName>
        <description>TEST_FIELD__c</description>
        <externalDeveloperName>TEST_FIELD__c</externalDeveloperName>
        <label>TEST_FIELD__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TickerSymbol__c</fullName>
        <description>TickerSymbol</description>
        <externalDeveloperName>TickerSymbol</externalDeveloperName>
        <label>TickerSymbol</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_of_Activities_pc__c</fullName>
        <description>Total_of_Activities__pc</description>
        <externalDeveloperName>Total_of_Activities__pc</externalDeveloperName>
        <label>Total_of_Activities__pc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tradestyle__c</fullName>
        <description>Tradestyle</description>
        <externalDeveloperName>Tradestyle</externalDeveloperName>
        <label>Tradestyle</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitter_Persona_ID_pc__c</fullName>
        <description>Twitter_Persona_ID__pc</description>
        <externalDeveloperName>Twitter_Persona_ID__pc</externalDeveloperName>
        <label>Twitter_Persona_ID__pc</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type</description>
        <externalDeveloperName>Type</externalDeveloperName>
        <label>Type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URLsrc_c__c</fullName>
        <description>URLsrc__c</description>
        <externalDeveloperName>URLsrc__c</externalDeveloperName>
        <label>URLsrc__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URLsrc_pc__c</fullName>
        <description>URLsrc__pc</description>
        <externalDeveloperName>URLsrc__pc</externalDeveloperName>
        <label>URLsrc__pc</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity_c__c</fullName>
        <description>UpsellOpportunity__c</description>
        <externalDeveloperName>UpsellOpportunity__c</externalDeveloperName>
        <label>UpsellOpportunity__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Closed_Won_Opportunties_c__c</fullName>
        <description>Value_Closed_Won_Opportunties__c</description>
        <externalDeveloperName>Value_Closed_Won_Opportunties__c</externalDeveloperName>
        <label>Value_Closed_Won_Opportunties__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_Open_Opportunties_c__c</fullName>
        <description>Value_Open_Opportunties__c</description>
        <externalDeveloperName>Value_Open_Opportunties__c</externalDeveloperName>
        <label>Value_Open_Opportunties__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_c__c</fullName>
        <description>Value__c</description>
        <externalDeveloperName>Value__c</externalDeveloperName>
        <label>Value__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vertical_Coverage_c__c</fullName>
        <description>Vertical_Coverage__c</description>
        <externalDeveloperName>Vertical_Coverage__c</externalDeveloperName>
        <label>Vertical_Coverage__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <description>Website</description>
        <externalDeveloperName>Website</externalDeveloperName>
        <label>Website</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Win_Loss_Ratio_c__c</fullName>
        <description>Win_Loss_Ratio__c</description>
        <externalDeveloperName>Win_Loss_Ratio__c</externalDeveloperName>
        <label>Win_Loss_Ratio__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Type_c__c</fullName>
        <description>Work_Type__c</description>
        <externalDeveloperName>Work_Type__c</externalDeveloperName>
        <label>Work_Type__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Type_c_grax_xf_worktype__c</fullName>
        <description>Work_Type__c_grax_xf_worktype</description>
        <externalDeveloperName>Work_Type__c_grax_xf_worktype</externalDeveloperName>
        <label>Work_Type__c_grax_xf_worktype</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Type_for_Quote_Creation_c__c</fullName>
        <description>Work_Type_for_Quote_Creation__c</description>
        <externalDeveloperName>Work_Type_for_Quote_Creation__c</externalDeveloperName>
        <label>Work_Type_for_Quote_Creation__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Type_for_Quote_Creation_c_grax_xf_w__c</fullName>
        <description>Work_Type_for_Quote_Creation__c_grax_xf_worktype</description>
        <externalDeveloperName>Work_Type_for_Quote_Creation__c_grax_xf_worktype</externalDeveloperName>
        <label>Work_Type_for_Quote_Creation__c_grax_xf_</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Type_for_Quote_Creation_r_Name__c</fullName>
        <description>Work_Type_for_Quote_Creation__r_Name</description>
        <externalDeveloperName>Work_Type_for_Quote_Creation__r_Name</externalDeveloperName>
        <label>Work_Type_for_Quote_Creation__r_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Type_r_Name__c</fullName>
        <description>Work_Type__r_Name</description>
        <externalDeveloperName>Work_Type__r_Name</externalDeveloperName>
        <label>Work_Type__r_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YTD_Revenue_Generated_c__c</fullName>
        <description>YTD_Revenue_Generated__c</description>
        <externalDeveloperName>YTD_Revenue_Generated__c</externalDeveloperName>
        <label>YTD_Revenue_Generated__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YearStarted__c</fullName>
        <description>YearStarted</description>
        <externalDeveloperName>YearStarted</externalDeveloperName>
        <label>YearStarted</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_of_Birth_pc__c</fullName>
        <description>Year_of_Birth__pc</description>
        <externalDeveloperName>Year_of_Birth__pc</externalDeveloperName>
        <label>Year_of_Birth__pc</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticsdemo_batch_id_c__c</fullName>
        <description>analyticsdemo_batch_id__c</description>
        <externalDeveloperName>analyticsdemo_batch_id__c</externalDeveloperName>
        <label>analyticsdemo_batch_id__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticsdemo_batch_id_pc__c</fullName>
        <description>analyticsdemo_batch_id__pc</description>
        <externalDeveloperName>analyticsdemo_batch_id__pc</externalDeveloperName>
        <label>analyticsdemo_batch_id__pc</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>attributes__c</fullName>
        <description>attributes</description>
        <externalDeveloperName>attributes</externalDeveloperName>
        <label>attributes</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_Active_c__c</fullName>
        <description>grax__Active__c</description>
        <externalDeveloperName>grax__Active__c</externalDeveloperName>
        <label>grax__Active__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_CreatedBy_Name__c</fullName>
        <description>grax_CreatedBy_Name</description>
        <externalDeveloperName>grax_CreatedBy_Name</externalDeveloperName>
        <label>grax_CreatedBy_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_CustomerPriority_c__c</fullName>
        <description>grax__CustomerPriority__c</description>
        <externalDeveloperName>grax__CustomerPriority__c</externalDeveloperName>
        <label>grax__CustomerPriority__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_DandbCompany_Name__c</fullName>
        <description>grax_DandbCompany_Name</description>
        <externalDeveloperName>grax_DandbCompany_Name</externalDeveloperName>
        <label>grax_DandbCompany_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_Default_Field_Entitlement_r_Name__c</fullName>
        <description>grax_Default_Field_Entitlement__r_Name</description>
        <externalDeveloperName>grax_Default_Field_Entitlement__r_Name</externalDeveloperName>
        <label>grax_Default_Field_Entitlement__r_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_Default_Price_Book_r_Name__c</fullName>
        <description>grax_Default_Price_Book__r_Name</description>
        <externalDeveloperName>grax_Default_Price_Book__r_Name</externalDeveloperName>
        <label>grax_Default_Price_Book__r_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_LastModifiedBy_Name__c</fullName>
        <description>grax_LastModifiedBy_Name</description>
        <externalDeveloperName>grax_LastModifiedBy_Name</externalDeveloperName>
        <label>grax_LastModifiedBy_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_NumberofLocations_c__c</fullName>
        <description>grax__NumberofLocations__c</description>
        <externalDeveloperName>grax__NumberofLocations__c</externalDeveloperName>
        <label>grax__NumberofLocations__c</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>grax_Operating_Hours_r_Name__c</fullName>
        <description>grax_Operating_Hours__r_Name</description>
        <externalDeveloperName>grax_Operating_Hours__r_Name</externalDeveloperName>
        <label>grax_Operating_Hours__r_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_Owner_Name__c</fullName>
        <description>grax_Owner_Name</description>
        <externalDeveloperName>grax_Owner_Name</externalDeveloperName>
        <label>grax_Owner_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_Parent_Name__c</fullName>
        <description>grax_Parent_Name</description>
        <externalDeveloperName>grax_Parent_Name</externalDeveloperName>
        <label>grax_Parent_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_PersonContact_Name__c</fullName>
        <description>grax_PersonContact_Name</description>
        <externalDeveloperName>grax_PersonContact_Name</externalDeveloperName>
        <label>grax_PersonContact_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_RecordType_Name__c</fullName>
        <description>grax_RecordType_Name</description>
        <externalDeveloperName>grax_RecordType_Name</externalDeveloperName>
        <label>grax_RecordType_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_SLAExpirationDate_c__c</fullName>
        <description>grax__SLAExpirationDate__c</description>
        <externalDeveloperName>grax__SLAExpirationDate__c</externalDeveloperName>
        <label>grax__SLAExpirationDate__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>grax_SLASerialNumber_c__c</fullName>
        <description>grax__SLASerialNumber__c</description>
        <externalDeveloperName>grax__SLASerialNumber__c</externalDeveloperName>
        <label>grax__SLASerialNumber__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_SLA_c__c</fullName>
        <description>grax__SLA__c</description>
        <externalDeveloperName>grax__SLA__c</externalDeveloperName>
        <label>grax__SLA__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_Service_Territory_r_Name__c</fullName>
        <description>grax_Service_Territory__r_Name</description>
        <externalDeveloperName>grax_Service_Territory__r_Name</externalDeveloperName>
        <label>grax_Service_Territory__r_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_UpsellOpportunity_c__c</fullName>
        <description>grax__UpsellOpportunity__c</description>
        <externalDeveloperName>grax__UpsellOpportunity__c</externalDeveloperName>
        <label>grax__UpsellOpportunity__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_Work_Type_for_Quote_Creation_r_Name__c</fullName>
        <description>grax_Work_Type_for_Quote_Creation__r_Name</description>
        <externalDeveloperName>grax_Work_Type_for_Quote_Creation__r_Name</externalDeveloperName>
        <label>grax_Work_Type_for_Quote_Creation__r_Nam</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_Work_Type_r_Name__c</fullName>
        <description>grax_Work_Type__r_Name</description>
        <externalDeveloperName>grax_Work_Type__r_Name</externalDeveloperName>
        <label>grax_Work_Type__r_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_account_name__c</fullName>
        <description>grax_account_name</description>
        <externalDeveloperName>grax_account_name</externalDeveloperName>
        <label>grax_account_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_account_xf__c</fullName>
        <description>grax_account_xf</description>
        <externalDeveloperName>grax_account_xf</externalDeveloperName>
        <label>grax_account_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_connectionreceivedid_name__c</fullName>
        <description>grax_connectionreceivedid_name</description>
        <externalDeveloperName>grax_connectionreceivedid_name</externalDeveloperName>
        <label>grax_connectionreceivedid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_connectionsentid_name__c</fullName>
        <description>grax_connectionsentid_name</description>
        <externalDeveloperName>grax_connectionsentid_name</externalDeveloperName>
        <label>grax_connectionsentid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_contact_xf__c</fullName>
        <description>grax_contact_xf</description>
        <externalDeveloperName>grax_contact_xf</externalDeveloperName>
        <label>grax_contact_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_createdbyid_name__c</fullName>
        <description>grax_createdbyid_name</description>
        <externalDeveloperName>grax_createdbyid_name</externalDeveloperName>
        <label>grax_createdbyid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_dandbcompany_xf__c</fullName>
        <description>grax_dandbcompany_xf</description>
        <externalDeveloperName>grax_dandbcompany_xf</externalDeveloperName>
        <label>grax_dandbcompany_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_dandbcompanyid_name__c</fullName>
        <description>grax_dandbcompanyid_name</description>
        <externalDeveloperName>grax_dandbcompanyid_name</externalDeveloperName>
        <label>grax_dandbcompanyid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_default_field_entitlement_c_name__c</fullName>
        <description>grax_default_field_entitlement__c_name</description>
        <externalDeveloperName>grax_default_field_entitlement__c_name</externalDeveloperName>
        <label>grax_default_field_entitlement__c_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_default_price_book_c_name__c</fullName>
        <description>grax_default_price_book__c_name</description>
        <externalDeveloperName>grax_default_price_book__c_name</externalDeveloperName>
        <label>grax_default_price_book__c_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_entitlement_xf__c</fullName>
        <description>grax_entitlement_xf</description>
        <externalDeveloperName>grax_entitlement_xf</externalDeveloperName>
        <label>grax_entitlement_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_lastmodifiedbyid_name__c</fullName>
        <description>grax_lastmodifiedbyid_name</description>
        <externalDeveloperName>grax_lastmodifiedbyid_name</externalDeveloperName>
        <label>grax_lastmodifiedbyid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_masterrecordid_name__c</fullName>
        <description>grax_masterrecordid_name</description>
        <externalDeveloperName>grax_masterrecordid_name</externalDeveloperName>
        <label>grax_masterrecordid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_operating_hours_c_name__c</fullName>
        <description>grax_operating_hours__c_name</description>
        <externalDeveloperName>grax_operating_hours__c_name</externalDeveloperName>
        <label>grax_operating_hours__c_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_operatinghours_xf__c</fullName>
        <description>grax_operatinghours_xf</description>
        <externalDeveloperName>grax_operatinghours_xf</externalDeveloperName>
        <label>grax_operatinghours_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_operatinghoursid_name__c</fullName>
        <description>grax_operatinghoursid_name</description>
        <externalDeveloperName>grax_operatinghoursid_name</externalDeveloperName>
        <label>grax_operatinghoursid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_ownerid_name__c</fullName>
        <description>grax_ownerid_name</description>
        <externalDeveloperName>grax_ownerid_name</externalDeveloperName>
        <label>grax_ownerid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_parentid_name__c</fullName>
        <description>grax_parentid_name</description>
        <externalDeveloperName>grax_parentid_name</externalDeveloperName>
        <label>grax_parentid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_personcontactid_name__c</fullName>
        <description>grax_personcontactid_name</description>
        <externalDeveloperName>grax_personcontactid_name</externalDeveloperName>
        <label>grax_personcontactid_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_pricebook2_xf__c</fullName>
        <description>grax_pricebook2_xf</description>
        <externalDeveloperName>grax_pricebook2_xf</externalDeveloperName>
        <label>grax_pricebook2_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grax_recordtype_xf__c</fullName>
        <description>grax_recordtype_xf</description>
        <externalDeveloperName>grax_recordtype_xf</externalDeveloperName>
        <label>grax_recordtype_xf</label>
        <length>128</length>
        <type>Text</type>
    </fields>
</CustomObject>